<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main_menu.MainMenuActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/credibanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/text_label_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/buttonAuthorizeTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_authorize_transaction"
        app:layout_constraintEnd_toEndOf="@+id/labelMenu"
        app:layout_constraintStart_toStartOf="@+id/labelMenu"
        app:layout_constraintTop_toBottomOf="@+id/labelMenu" />

    <Button
        android:id="@+id/buttonSeeAuthorizedTransactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_see_authorized_transactions"
        app:layout_constraintEnd_toEndOf="@+id/buttonAuthorizeTransaction"
        app:layout_constraintStart_toStartOf="@+id/buttonAuthorizeTransaction"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuthorizeTransaction" />

</androidx.constraintlayout.widget.ConstraintLayout>
